--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,18 @@
-/* app css stylesheet */
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+body {
+  padding-top: 70px;
+  padding-bottom: 30px;
 }
 
-.menu:before {
-  content: "[";
+.theme-dropdown .dropdown-menu {
+  position: static;
+  display: block;
+  margin-bottom: 20px;
 }
 
-.menu:after {
-  content: "]";
+.theme-showcase > p > .btn {
+  margin: 5px 0;
 }
 
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+.theme-showcase .navbar .container {
+  width: auto;
 }
