--- a/app/carousel.css
+++ b/app/carousel.css
@@ -54,10 +54,12 @@ body {
 }
 .carousel-inner > .item > img {
   position: absolute;
-  top: 0;
+  top: 50%;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  min-height: 500px;
+	max-height: none;
+	margin-top: -50%;
 }
 
 
