--- a/app/app.css
+++ b/app/app.css
@@ -108,4 +108,8 @@ body {
 
 .roster {
 	margin-top: 50px;
+	padding-top: 20px;
+	background-color: rgb(50,50,50);
+	background-color: rgba(0,0,0,0.6);
+	width: auto;
 }
