--- a/app/app.css
+++ b/app/app.css
@@ -1,27 +1,51 @@
 /* GLOBAL STYLES
 -------------------------------------------------- */
-/* Padding below the footer and lighter body text */
-
-html {
-  background:linear-gradient(
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(images/champs_again.jpeg) no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	position: relative;
-	min-height: 100%;
-}
-
 body {
 	margin-top: 70px;
 	margin-bottom: 50px;
   padding-bottom: 40px;
   color: white;
-	background-color: transparent;
+	background-color: black;
+}
+
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 500px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+	z-index:-1;
+	
+	/* darken */
+	opacity: 0.5;
+}
+
+/* iPhone portrait */
+@media screen and (max-width: 476px) and (min-height: 476px) { /* Specific to this particular image */
+  img.bg {
+    /* Set rules to fill background */
+		min-height: 476px;
+		min-width: 100%;
+
+		/* Set up proportionate scaling */
+		width: auto;
+		height: 100%;
+
+		/* Set up positioning */
+		top: 0;
+		left: -35%;
+  }
+}
+
+/* big screen */
+@media screen and (min-width: 800px) { /* Specific to this particular image */
+  img.bg {
+  }
 }
 
 .app-view {
@@ -52,19 +76,6 @@ body {
 }
 .navbar-wrapper .navbar .container {
   width: auto;
-}
-
-
-/* FOOTER CSS
-------------------------------------------------- */
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
-  background-color: transparent;
-	color: lightgray;
 }
 
 
