--- a/app/app.css
+++ b/app/app.css
@@ -172,3 +172,15 @@ img.bg {
 	width: 180px;
 	height: 180px;
 }
+
+.win {
+       color: palegreen;
+}
+
+.rain {
+       color: deepskyblue;
+}
+
+.loss {
+       color: palevioletred;
+   }
