--- a/app/app.css
+++ b/app/app.css
@@ -123,34 +123,36 @@ img.bg {
   width: auto;
 }
 
-#login-dp{
-    min-width: 250px;
-    padding: 14px 14px 0;
-    overflow:hidden;
-    background-color:rgba(255,255,255,.8);
+.login-dp{
+  min-width: 250px;
+  padding: 14px 14px 0;
+  overflow:hidden;
+  background-color:rgb(255,255,255);
+  background-color:rgba(255,255,255,.8);
 }
 
-#login-dp .help-block{
-    font-size:12px    
+.login-dp .help-block{
+  font-size:12px    
 }
 
-#login-dp .bottom{
-    background-color:rgba(255,255,255,.8);
-    border-top:1px solid #ddd;
-    clear:both;
-    padding:14px;
+.login-dp .bottom{
+  background-color:rgb(255,255,255);
+  background-color:rgba(255,255,255,.8);
+  border-top:1px solid #ddd;
+  clear:both;
+  padding:14px;
 }
 
-#login-dp .social-buttons{
-    margin:12px 0    
+.login-dp .social-buttons{
+  margin:12px 0    
 }
 
-#login-dp .social-buttons a{
-    width: 49%;
+.login-dp .social-buttons a{
+  width: 49%;
 }
 
-#login-dp .form-group {
-    margin-bottom: 10px;
+.login-dp .form-group {
+  margin-bottom: 10px;
 }
 
 /* RESPONSIVE CSS
