[SIGNUP] little formatting

--- a/app/app.css
+++ b/app/app.css
@@ -97,6 +97,10 @@ img.bg {
   padding-bottom: 20px;
 }
 
+.app-container {
+  padding-right: 45px;
+}
+
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
