added spinner, username update, and redirect for signup

--- a/app/app.css
+++ b/app/app.css
@@ -219,3 +219,9 @@ img.bg {
 .loss {
 	color: palevioletred;
 }
+
+/* SIGNUP CSS
+--------------------------------------------------- */
+.signup-btn {
+  width: 100px;
+}
