[MASTER] updated standings link and added css for umpire no-show

--- a/app/app.css
+++ b/app/app.css
@@ -229,6 +229,13 @@ img.bg {
 	height: 180px;
 }
 
+/* SCHEDULE CSS
+--------------------------------------------------- */
+
+.no-ump {
+	color: gray;
+}
+
 .win {
 	color: palegreen;
 }
